# agent-monitor

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ai-config-generator.md  api-reference.md  cli.md  compliance.md  concepts.md  config-syntax.md  events.md  index.md  integration.md  kill-switches.md  metrics-and-baselines.md
examples/: END_TO_END_TEST.md  compliance_export_example.py  guardrails_integration.py  kill_switch_example.py  quickstart.py
examples/configs/: basic.yaml  enterprise.yaml
src/theaios/agent_monitor/: __init__.py  alerts.py  anomaly.py  baselines.py  cli.py  compliance.py  config.py  engine.py  events.py  expressions.py  kill_switch.py  metrics.py  types.py
src/theaios/agent_monitor/adapters/: __init__.py  guardrails.py  otel.py
src/theaios/agent_monitor/reporting/: __init__.py  console.py  json_export.py
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_baselines.py  test_compliance.py  test_config.py  test_engine.py  test_events.py  test_kill_switch.py  test_metrics.py  test_types.py
tests/adapters/: test_guardrails.py
tests/integration/: test_e2e.py
